kubernetes/ochat/ochat.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ochat
  namespace: ochacafe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ochat
  template:
    metadata:
      labels:
        app: ochat
    spec:
      containers:
        - name: ochat
          image: nrt.ocir.io/orasejapan/shukawam/ochat:0.0.2
          ports:
            - name: api
              containerPort: 8501
      imagePullSecrets:
        - name: ocir-secret
---
apiVersion: v1
kind: Service
metadata:
  name: ochat-service
  namespace: milvus
spec:
  selector:
    app: ochat
  ports:
    - protocol: TCP
      port: 8501
      targetPort: 8501
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ochat
  namespace: ochacafe
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ochat.shukawam.me
      secretName: shukawam-tls-secret-ochat
  rules:
    - host: ochat.shukawam.me
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: ochat-service
                port:
                  number: 8501
